development-runs/517/k8s/prod/20-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: quotes-app
  labels:
    app.kubernetes.io/name: api
    app.kubernetes.io/part-of: quotes-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: api
        app.kubernetes.io/part-of: quotes-app
    spec:
      containers:
        - name: api
          image: api
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
