development-runs/517/k8s/prod/30-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: quotes-app
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: quotes-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: frontend
        app.kubernetes.io/part-of: quotes-app
    spec:
      containers:
        - name: frontend
          image: frontend
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
