development-runs/517/k8s/prod/40-quotes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quotes
  namespace: quotes-app
  labels:
    app.kubernetes.io/name: quotes
    app.kubernetes.io/part-of: quotes-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: quotes
  template:
    metadata:
      labels:
        app.kubernetes.io/name: quotes
        app.kubernetes.io/part-of: quotes-app
    spec:
      containers:
        - name: quotes
          image: quotes
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
